--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,4 +62,30 @@ harbor-deploy-job:
   script:
     - echo "$HARBOR_ENV" > ~/.env
     - !reference [.generic-deploy-job, script]
+  when: manual
+
+traefik-deploy-job:
+  extends: .generic-deploy-job
+  stage: deploy
+  variables:
+    rep: traefik
+  script:
+#    - ssh $DEPLOY_HOST "mkdir -p ~/${CI_PROJECT_NAME}_deploy/traefik/"
+
+    - ssh $DEPLOY_HOST "mkdir -p ~/${CI_PROJECT_NAME}_deploy/traefik/data/"
+
+#    - scp -r ./traefik/* $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/
+    - echo "$TRAEFIK_ENV" > ~/.env
+#    - scp ~/.env $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/
+
+    - echo "$PASSWD" > ~/.passwd
+    - scp ~/.passwd $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/data
+
+    - echo "$ACME_JSON" > ~/acme.json
+    - chmod 600 ~/acme.json
+    - scp ~/acme.json $DEPLOY_HOST:~/${CI_PROJECT_NAME}_deploy/traefik/data
+
+    - !reference [.generic-deploy-job, script]
+#    - ssh $DEPLOY_HOST "echo ${CI_REGISTRY_PASSWORD} | sudo docker login -u ${CI_REGISTRY_USER} --password-stdin ${CI_REGISTRY}"
+#    - ssh $DEPLOY_HOST "cd ~/${CI_PROJECT_NAME}_deploy/traefik/ && sudo docker compose pull && sudo docker compose up -d"
 #  when: manual
